--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -65,6 +65,8 @@ include(GetVersionFromGitTag)
 add_definitions(-D__VER="${${PROJECT_NAME}_VERSION_STRING_FULL}")
 add_definitions(-D__VER_LATEST="${${PROJECT_NAME}_VERSION_GIT_SHA_LATEST}")
 
+message("latest SHA: ${${PROJECT_NAME}_VERSION_GIT_SHA_LATEST}")
+message(" HEAD  SHA: ${${PROJECT_NAME}_VERSION_GIT_SHA}")
 
 if (APPLE AND NOT DEFINED Qt5_DIR)
 	set(Qt5_DIR "/usr/local/opt/qt5/lib/cmake/Qt5")
