--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,7 +151,7 @@ endif()
 
 
 if(APPLE)
-    set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${${PROJECT_NAME}_VERSION_STRING_FULL}")
+	set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-MacOS")
     set(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/resources/icons/icon.icns")
 
     set(CPACK_BUNDLE_NAME "Neutrino")
