--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -8,20 +8,9 @@ FOREACH(oneplugin ${allfiles})
     IF(IS_DIRECTORY ${oneplugin})
         get_filename_component(namedir ${oneplugin} NAME)
         if(NOT ( ${namedir} STREQUAL "testPlugin") OR (CMAKE_BUILD_TYPE STREQUAL "Debug"))
-            LIST(APPEND plugins_list ${oneplugin})
-        endif()
+			if (EXISTS "${oneplugin}/CMakeLists.txt")
+				add_subdirectory(${oneplugin})
+			endif()
+		endif()
     ENDIF()
 ENDFOREACH()
-
-list(LENGTH plugins_list plugins_list_len)
-
-message(STATUS "Found ${plugins_list_len} plugins")
-
-foreach (plugin_name ${plugins_list})
-    if (EXISTS "${plugin_name}/CMakeLists.txt")
-        add_subdirectory(${plugin_name})
-    else()
-        message (STATUS "Discarding plugin ${plugin_name}: no CmakeLists.txt found")
-    endif()
-endforeach()
-
