--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,10 +77,36 @@ SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt")
 set(CPACK_PACKAGE_DESCRIPTION_FILE "${${PROJECT_NAME}_SOURCE_DIR}/README.md")
 
 include(GetVersionFromGitTag)
+find_package(Git REQUIRED)
 if (GIT_FOUND)
+	# Get last tag from git
+	execute_process(COMMAND ${GIT_EXECUTABLE} rev-parse --abbrev-ref HEAD
+		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+		OUTPUT_VARIABLE ${PROJECT_NAME}_VERSION_STRING
+		OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+	#How many commits since last tag
+	execute_process(COMMAND ${GIT_EXECUTABLE} rev-list --count HEAD
+		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+		OUTPUT_VARIABLE ${PROJECT_NAME}_VERSION_AHEAD
+		OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+	# Get current commit SHA from git
+	execute_process(COMMAND ${GIT_EXECUTABLE} rev-parse HEAD
+		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+		OUTPUT_VARIABLE ${PROJECT_NAME}_VERSION_GIT_SHA
+		OUTPUT_STRIP_TRAILING_WHITESPACE)
+
 	set (CPACK_PACKAGE_NAME ${PROJECT_NAME})
 	set (CPACK_PACKAGE_VERSION "${${PROJECT_NAME}_VERSION_STRING}${${PROJECT_NAME}_VERSION_AHEAD}")
-endif()
+
+else(GIT_FOUND)
+	message( FATAL_ERROR "You need to install GIT")
+endif(GIT_FOUND)
+
+
+# Set project version (without the preceding 'v')
+set(${PROJECT_NAME}_VERSION ${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_VERSION_MINOR}.${${PROJECT_NAME}_VERSION_PATCH})
 
 
 if (WIN32)
@@ -93,7 +119,7 @@ if (WIN32)
 	SET(CPACK_NSIS_DISPLAY_NAME "${CPACK_PACKAGE_INSTALL_DIRECTORY} Neutrino")
 	SET(CPACK_NSIS_HELP_LINK "https://github.com/NeutrinoToolkit/Neutrino")
 	SET(CPACK_NSIS_URL_INFO_ABOUT "https://github.com/NeutrinoToolkit/Neutrino")
-	SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
+	SET(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
 
 	SET(CPACK_NSIS_MODIFY_PATH OFF)
 	SET(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
