--- a/plugins/Shell/CMakeLists.txt
+++ b/plugins/Shell/CMakeLists.txt
@@ -65,8 +65,8 @@ if(PYTHONLIBS_FOUND)
 		if (LINUX)
 			message (STATUS "PythonQt lib is copied along")
 			install (FILES ${PYTHONQT} DESTINATION lib)
-			list(APPEND CPACK_DEBIAN_PACKAGE_CONFLICTS "libpythonqt, libpythonqt2.1, libpythonqt3.0")
-			message (STATUS "[${DISTRO}] Warning: .deb will conflict with ${CPACK_DEBIAN_PACKAGE_CONFLICTS}")
+			list(APPEND CPACK_DEBIAN_PACKAGE_CONFLICTS "libpythonqt3.0")
+			message (STATUS "Warning: .deb will conflict with ${CPACK_DEBIAN_PACKAGE_CONFLICTS}")
 
 			install(FILES ${PYTHONQT_EXAMPLES} DESTINATION share/neutrino/python/examples)
 		endif()
