--- a/nPhysImage/CMakeLists.txt
+++ b/nPhysImage/CMakeLists.txt
@@ -1,8 +1,7 @@
 # this is the frigging nPhysImage cmakelists
 cmake_minimum_required (VERSION 3.9)
 
-if (LINUX)
-	message(STATUS "Linux")
+if(LINUX)
 	set (CMAKE_PREFIX_PATH "/usr")
 endif()
 
@@ -13,22 +12,25 @@ target_include_directories (nPhysImageF PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 set (CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../resources/cmake)
 include(FindNeutrinoDeps)
 
-SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${OpenMP_CXX_FLAGS}")
-
 target_link_libraries(nPhysImageF m ${LIBS})
 
 # install
 if (WIN32)
 	install (TARGETS nPhysImageF COMPONENT binary DESTINATION bin)
-else()
-	install (TARGETS nPhysImageF COMPONENT binary DESTINATION lib)
 endif()
 
+if(LINUX)
+    install (TARGETS nPhysImageF COMPONENT binary DESTINATION lib)
+endif()
+
+
 if (APPLE)
-	set (LIB_INSTALL_DIR "/usr/local/lib")
-	set (CMAKE_INSTALL_RPATH "/usr/local/lib")
-	set (CMAKE_MACOSX_RPATH off)
-	set_target_properties(nPhysImageF PROPERTIES INSTALL_RPATH ${LIB_INSTALL_DIR})
+    set (CMAKE_SKIP_RPATH ON)
+    set (CMAKE_INSTALL_RPATH "@executable_path/../Frameworks")
+
+#	set (LIB_INSTALL_DIR "/usr/local/lib")
+    set_target_properties(nPhysImageF PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_RPATH})
+    install (TARGETS nPhysImageF COMPONENT binary DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/../Neutrino.app/Contents/Frameworks")
 endif()
 
 
