--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -186,7 +186,11 @@ if(APPLE)
 
     set(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/..")
     set (EXECUTABLE_OUTPUT_PATH ".")
-    install (TARGETS Neutrino BUNDLE DESTINATION "${CMAKE_INSTALL_PREFIX}" COMPONENT binary)
+
+    set (CMAKE_INSTALL_RPATH "@executable_path/../Frameworks")
+    set_target_properties(${PROJECT_NAME} PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_RPATH} INSTALL_RPATH_USE_LINK_PATH TRUE)
+
+    install (TARGETS ${PROJECT_NAME} BUNDLE DESTINATION "${CMAKE_INSTALL_PREFIX}" COMPONENT binary)
 endif()
 
 if(WIN32)
