--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,8 +21,6 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-set (LIBPATHS /usr/lib /usr/local/lib ../lib)
-
 ## sources
 file(GLOB UIS ${CMAKE_CURRENT_SOURCE_DIR}/../UIs/*.ui)
 set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_CURRENT_SOURCE_DIR}/../UIs)
@@ -204,6 +202,8 @@ if(WIN32)
 
 	set_property(TARGET ${PROJECT_NAME} PROPERTY ENABLE_EXPORTS ON)
 	set_property(TARGET ${PROJECT_NAME} PROPERTY WINDOWS_EXPORT_ALL_SYMBOLS ON)
+    install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin COMPONENT binary)
+
 endif()
 
 if(LINUX)
