--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,8 +32,8 @@ add_definitions(-D__VER="${${PROJECT_NAME}_VERSION_AHEAD}")
 add_definitions(-D__VER_SHA="${${PROJECT_NAME}_VERSION_GIT_SHA}")
 
 if (APPLE AND NOT DEFINED Qt5_DIR)
-	set(Qt5_DIR "/usr/local/opt/qt5/lib/cmake/Qt5")
-	MESSAGE(STATUS "Qt5_DIR set to ${Qt5_DIR}")
+    set(Qt5_DIR "/usr/local/opt/qt5/lib/cmake/Qt5")
+    MESSAGE(STATUS "Qt5_DIR set to ${Qt5_DIR}")
 endif()
 
 set(MODULES Core Gui Sql Widgets Svg PrintSupport UiTools OpenGL Network)
@@ -48,9 +48,9 @@ file(GLOB_RECURSE ICONS ${ICONSDIR}/*.png)
 set(ICONS_QRC ${QRCDIR}/icons.qrc)
 file(WRITE ${ICONS_QRC} "<RCC>\n    <qresource prefix=\"/icons/\">\n")
 foreach(my_file ${ICONS})
-	file(RELATIVE_PATH my_file_relative_path ${QRCDIR} ${my_file})
-	GET_FILENAME_COMPONENT(my_file_basename ${my_file} NAME)
-	file(APPEND ${ICONS_QRC} "        <file alias=\"${my_file_basename}\">${my_file_relative_path}</file>\n")
+    file(RELATIVE_PATH my_file_relative_path ${QRCDIR} ${my_file})
+    GET_FILENAME_COMPONENT(my_file_basename ${my_file} NAME)
+    file(APPEND ${ICONS_QRC} "        <file alias=\"${my_file_basename}\">${my_file_relative_path}</file>\n")
 endforeach()
 file(APPEND ${ICONS_QRC} "    </qresource>\n</RCC>")
 list(LENGTH ICONS LIST_LENGTH)
@@ -63,9 +63,9 @@ file(GLOB HTMLS ${HTMLDIR}/*.html)
 set(HTML_QRC ${QRCDIR}/html.qrc)
 file(WRITE ${HTML_QRC} "<RCC>\n    <qresource prefix=\"/html/\">\n")
 foreach(my_file ${HTMLS})
-	file(RELATIVE_PATH my_file_relative_path ${QRCDIR} ${my_file})
-	GET_FILENAME_COMPONENT(my_file_basename ${my_file} NAME)
-	file(APPEND ${HTML_QRC} "        <file alias=\"${my_file_basename}\">${my_file_relative_path}</file>\n")
+    file(RELATIVE_PATH my_file_relative_path ${QRCDIR} ${my_file})
+    GET_FILENAME_COMPONENT(my_file_basename ${my_file} NAME)
+    file(APPEND ${HTML_QRC} "        <file alias=\"${my_file_basename}\">${my_file_relative_path}</file>\n")
 endforeach()
 file(APPEND ${HTML_QRC} "    </qresource>\n</RCC>")
 list(LENGTH HTMLS LIST_LENGTH)
@@ -75,9 +75,9 @@ file(GLOB_RECURSE HTMLLICENSES ${HTMLDIR}/licenses/*)
 set(LICENSES_QRC ${QRCDIR}/licenses.qrc)
 file(WRITE ${LICENSES_QRC} "<RCC>\n    <qresource prefix=\"/licenses/\">\n")
 foreach(my_file ${HTMLLICENSES})
-	file(RELATIVE_PATH my_file_relative_path ${QRCDIR} ${my_file})
-	GET_FILENAME_COMPONENT(my_file_basename ${my_file} NAME)
-	file(APPEND ${LICENSES_QRC} "        <file alias=\"${my_file_basename}\">${my_file_relative_path}</file>\n")
+    file(RELATIVE_PATH my_file_relative_path ${QRCDIR} ${my_file})
+    GET_FILENAME_COMPONENT(my_file_basename ${my_file} NAME)
+    file(APPEND ${LICENSES_QRC} "        <file alias=\"${my_file_basename}\">${my_file_relative_path}</file>\n")
 endforeach()
 file(APPEND ${LICENSES_QRC} "    </qresource>\n</RCC>")
 list(LENGTH HTMLLICENSES LIST_LENGTH)
@@ -89,34 +89,34 @@ include_directories(graphics pans pans/colorbar pans/winlist)
 #translate ui
 
 if (Qt5LinguistTools_FOUND)
-	SET(LANGUAGES fr_FR it_IT ko_KP)
+    SET(LANGUAGES fr_FR it_IT ko_KP)
 
-	SET(LANGUAGE_TS_FILES)
-	FOREACH(LANGUAGE ${LANGUAGES})
-	SET(TS_FILE "${CMAKE_CURRENT_SOURCE_DIR}/../resources/translations/neutrino_${LANGUAGE}.ts")
-	message(STATUS "Language : ${TS_FILE}")
-	SET(LANGUAGE_TS_FILES ${LANGUAGE_TS_FILES} ${TS_FILE})
+    SET(LANGUAGE_TS_FILES)
+    FOREACH(LANGUAGE ${LANGUAGES})
+    SET(TS_FILE "${CMAKE_CURRENT_SOURCE_DIR}/../resources/translations/neutrino_${LANGUAGE}.ts")
+    message(STATUS "Language : ${TS_FILE}")
+    SET(LANGUAGE_TS_FILES ${LANGUAGE_TS_FILES} ${TS_FILE})
 
-	if(EXISTS ${TS_FILE})
-		qt5_add_translation(qm_files ${TS_FILE})
-	else (EXISTS ${TS_FILE})
-		qt5_create_translation(qm_files ${SOURCES} ${UIS} ${TS_FILE})
-	endif(EXISTS ${TS_FILE})
+    if(EXISTS ${TS_FILE})
+        qt5_add_translation(TRASL_FILES ${TS_FILE})
+    else (EXISTS ${TS_FILE})
+        qt5_create_translation(TRASL_FILES ${SOURCES} ${UIS} ${TS_FILE})
+    endif(EXISTS ${TS_FILE})
 
-	ENDFOREACH(LANGUAGE ${LANGUAGES})
+    ENDFOREACH(LANGUAGE ${LANGUAGES})
 
-	IF(LANGUAGE_TS_FILES)
+    IF(LANGUAGE_TS_FILES)
 
-	set(TRANSL_QRC ${QRCDIR}/translations.qrc)
-	file(WRITE ${TRANSL_QRC} "<RCC>\n    <qresource prefix=\"/translations/\">\n")
-	foreach(my_file ${qm_files})
-		file(RELATIVE_PATH my_file_relative_path ${QRCDIR} ${my_file})
-		GET_FILENAME_COMPONENT(my_file_basename ${my_file} NAME)
-		file(APPEND ${TRANSL_QRC} "        <file alias=\"${my_file_basename}\">${my_file_relative_path}</file>\n")
-	endforeach()
-	file(APPEND ${TRANSL_QRC} "    </qresource>\n</RCC>")
-	list(LENGTH LANGUAGE_TS_FILES LIST_LENGTH)
-	message(STATUS "${LIST_LENGTH} translation files: ${TRANSL_QRC}")
+    set(TRANSL_QRC ${QRCDIR}/translations.qrc)
+    file(WRITE ${TRANSL_QRC} "<RCC>\n    <qresource prefix=\"/translations/\">\n")
+    foreach(my_file ${TRASL_FILES})
+        file(RELATIVE_PATH my_file_relative_path ${QRCDIR} ${my_file})
+        GET_FILENAME_COMPONENT(my_file_basename ${my_file} NAME)
+        file(APPEND ${TRANSL_QRC} "        <file alias=\"${my_file_basename}\">${my_file_relative_path}</file>\n")
+    endforeach()
+    file(APPEND ${TRANSL_QRC} "    </qresource>\n</RCC>")
+    list(LENGTH LANGUAGE_TS_FILES LIST_LENGTH)
+    message(STATUS "${LIST_LENGTH} translation files: ${TRANSL_QRC}")
 
 ENDIF(LANGUAGE_TS_FILES)
 
@@ -136,30 +136,29 @@ set(PROJECT_COPYRIGHT_YEAR "2011-${CURRENT_YEAR}")
 
 
 if(APPLE)
-	set(MACOSX_BUNDLE_EXECUTABLE_NAME "${PROJECT_NAME}")
-	set(MACOSX_BUNDLE_INFO_STRING "${PROJECT_NAME} ${${PROJECT_NAME}_VERSION}")
-	set(MACOSX_BUNDLE_GUI_IDENTIFIER "${PROJECT_DOMAIN_SECOND}.${PROJECT_DOMAIN_FIRST}")
+    set(MACOSX_BUNDLE_EXECUTABLE_NAME "${PROJECT_NAME}")
+    set(MACOSX_BUNDLE_INFO_STRING "${PROJECT_NAME} ${${PROJECT_NAME}_VERSION}")
+    set(MACOSX_BUNDLE_GUI_IDENTIFIER "${PROJECT_DOMAIN_SECOND}.${PROJECT_DOMAIN_FIRST}")
 
-	set(MACOSX_BUNDLE_BUNDLE_VERSION "${${PROJECT_NAME}_VERSION}")
-	set(MACOSX_BUNDLE_SHORT_VERSION_STRING "${${PROJECT_NAME}_VERSION}")
-	set(MACOSX_BUNDLE_LONG_VERSION_STRING "${${PROJECT_NAME}_VERSION_STRING_FULL}")
-	set(MACOSX_BUNDLE_COPYRIGHT "Copyright ${PROJECT_COPYRIGHT_YEAR} Tommaso Vinci, Alessandro Flacco. GNU General Public License v2.0")
+    set(MACOSX_BUNDLE_BUNDLE_VERSION "${${PROJECT_NAME}_VERSION}")
+    set(MACOSX_BUNDLE_SHORT_VERSION_STRING "${${PROJECT_NAME}_VERSION}")
+    set(MACOSX_BUNDLE_LONG_VERSION_STRING "${${PROJECT_NAME}_VERSION_STRING_FULL}")
+    set(MACOSX_BUNDLE_COPYRIGHT "Copyright ${PROJECT_COPYRIGHT_YEAR} Tommaso Vinci, Alessandro Flacco. GNU General Public License v2.0")
 
-	set(MACOSX_BUNDLE_ICON_FILE icon.icns)
-	set(${PROJECT_NAME}_ICON ${CMAKE_CURRENT_SOURCE_DIR}/../resources/icons/icon.icns)
-	set(${PROJECT_NAME}_ICONTYPE ${CMAKE_CURRENT_SOURCE_DIR}/../resources/macPackage/filetype.icns)
+    set(MACOSX_BUNDLE_ICON_FILE icon.icns)
+    set(${PROJECT_NAME}_ICON ${CMAKE_CURRENT_SOURCE_DIR}/../resources/icons/icon.icns)
+    set(${PROJECT_NAME}_ICONTYPE ${CMAKE_CURRENT_SOURCE_DIR}/../resources/macPackage/filetype.icns)
 
-	set_source_files_properties(${${PROJECT_NAME}_ICON} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
-	set_source_files_properties(${${PROJECT_NAME}_ICONTYPE} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
+    set_source_files_properties(${${PROJECT_NAME}_ICON} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
+    set_source_files_properties(${${PROJECT_NAME}_ICONTYPE} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
 
-	add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${${PROJECT_NAME}_ICON} ${${PROJECT_NAME}_ICONTYPE} ${SOURCES} ${UIS} ${ICONS_QRC} ${HTML_QRC} ${LICENSES_QRC} ${TRANSL_QRC} ${ICONS_QRC} ${HTML_QRC} ${qm_files})
-	target_link_libraries(Neutrino "-framework IOKit -framework CoreFoundation")
+    add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${${PROJECT_NAME}_ICON} ${${PROJECT_NAME}_ICONTYPE} ${SOURCES} ${UIS} ${ICONS_QRC} ${HTML_QRC} ${LICENSES_QRC} ${TRANSL_QRC} ${ICONS_QRC} ${HTML_QRC} ${TRASL_FILES})
+    target_link_libraries(Neutrino "-framework IOKit -framework CoreFoundation")
 
-	configure_file("${CMAKE_CURRENT_SOURCE_DIR}/../resources/macPackage/neutrino.plist.cmake" ${CMAKE_CURRENT_BINARY_DIR}/Info.plist)
-	set_target_properties(${PROJECT_NAME} PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_BINARY_DIR}/Info.plist)
+    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/../resources/macPackage/neutrino.plist.cmake" ${CMAKE_CURRENT_BINARY_DIR}/Info.plist)
+    set_target_properties(${PROJECT_NAME} PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_BINARY_DIR}/Info.plist)
 
     set(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/..")
-    set (EXECUTABLE_OUTPUT_PATH ".")
 
     set (CMAKE_INSTALL_RPATH "@executable_path/../Frameworks")
     set_target_properties(${PROJECT_NAME} PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_RPATH} INSTALL_RPATH_USE_LINK_PATH TRUE)
@@ -168,22 +167,22 @@ if(APPLE)
 endif()
 
 if(WIN32)
-	set (RC_WIN "${${PROJECT_NAME}_SOURCE_DIR}/resources/neutrino.rc")
-	list (APPEND CMAKE_EXE_LINKER_FLAGS "-Wl,--export-all-symbols")
-	if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-		add_executable(${PROJECT_NAME} ${SOURCES} ${UIS} ${ICONS_QRC} ${HTML_QRC} ${LICENSES_QRC} ${TRANSL_QRC} ${RC_WIN} )
-	else()
-		add_executable(${PROJECT_NAME} WIN32  ${SOURCES} ${UIS} ${ICONS_QRC} ${HTML_QRC} ${LICENSES_QRC} ${TRANSL_QRC} ${RC_WIN} )
-	endif()
+    set (RC_WIN "${${PROJECT_NAME}_SOURCE_DIR}/resources/neutrino.rc")
+    list (APPEND CMAKE_EXE_LINKER_FLAGS "-Wl,--export-all-symbols")
+    if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+        add_executable(${PROJECT_NAME} ${SOURCES} ${UIS} ${ICONS_QRC} ${HTML_QRC} ${LICENSES_QRC} ${TRANSL_QRC} ${RC_WIN} )
+    else()
+        add_executable(${PROJECT_NAME} WIN32  ${SOURCES} ${UIS} ${ICONS_QRC} ${HTML_QRC} ${LICENSES_QRC} ${TRANSL_QRC} ${RC_WIN} )
+    endif()
 
-	set_property(TARGET ${PROJECT_NAME} PROPERTY ENABLE_EXPORTS ON)
-	set_property(TARGET ${PROJECT_NAME} PROPERTY WINDOWS_EXPORT_ALL_SYMBOLS ON)
+    set_property(TARGET ${PROJECT_NAME} PROPERTY ENABLE_EXPORTS ON)
+    set_property(TARGET ${PROJECT_NAME} PROPERTY WINDOWS_EXPORT_ALL_SYMBOLS ON)
     install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin COMPONENT binary)
 
 endif()
 
 if(LINUX)
-	add_executable(${PROJECT_NAME} ${SOURCES} ${UIS} ${ICONS_QRC} ${HTML_QRC} ${LICENSES_QRC} ${TRANSL_QRC} ${qm_files})
+    add_executable(${PROJECT_NAME} ${SOURCES} ${UIS} ${ICONS_QRC} ${HTML_QRC} ${LICENSES_QRC} ${TRANSL_QRC} ${TRASL_FILES})
     install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin COMPONENT binary)
 endif()
 
